--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ProjetoJava2
 spring.datasource.username=postgres
-spring.datasource.password=Thunder-41
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -11,7 +11,7 @@ server.error.include-stacktrace=on-param
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=grupo4.serratec@gmail.com
-spring.mail.password=1-PassitoBailanteMaria
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enabled=true
 spring.mail.properties.mail.smtp.starttls.required=true
